auth controller and router
